--- a/package.json
+++ b/package.json
@@ -15,6 +15,15 @@
 		"start": "wp-scripts start --webpack-copy-php --blocks-manifest"
 	},
 	"devDependencies": {
-		"@wordpress/scripts": "^30.19.0"
+		"@wordpress/scripts": "30.19.0",
+		"array-move": "^4.0.0",
+		"lodash.times": "4.3.2",
+		"memize": "2.1.0"
+	},
+	"dependencies": {
+		"fleximple-components": "file:../fleximple-components",
+		"react-select": "5.10.1",
+		"react-sortable-hoc": "2.0.0",
+		"react-sortablejs": "6.1.4"
 	}
 }
