--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
 	"name": "fleximple-blocks-post",
 	"version": "0.1.0",
-	"description": "Example block scaffolded with Create Block tool.",
-	"author": "The WordPress Contributors",
+	"description": "A Gutenberg block that displays a specific post or page.",
+	"author": "Rodrigo D’Agostino <rodrigo.dagostino@proton.me>",
 	"license": "GPL-2.0-or-later",
 	"main": "build/index.js",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/rodrigodagostino/fleximple-blocks-post.git"
+	},
 	"scripts": {
 		"build": "wp-scripts build --webpack-copy-php --blocks-manifest",
 		"format": "wp-scripts format",
@@ -21,7 +25,7 @@
 	},
 	"devDependencies": {
 		"@wordpress/scripts": "30.19.0",
-		"array-move": "^4.0.0",
+		"array-move": "4.0.0",
 		"lodash.times": "4.3.2",
 		"memize": "2.1.0"
 	},
